# Evolverbetert

./: #Evolverbetert-exe.hp#  .gitignore  .tags  Evolverbetert-exe (copy).prof  Evolverbetert-exe.aux  Evolverbetert-exe.hp  Evolverbetert-exe.prof  Evolverbetert-exe.ps  Evolverbetert.cabal  LICENSE  README.md  package.yaml  stack.yaml
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/doc/: doc-index.html  index.html
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/doc/Evolverbetert-0.1.0.0/: Evolverbetert.haddock  (+15 more)
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/flag-cache/: Evolverbetert-0.1.0.0-1TO2KDLMhN88cgBVIdFJsQ  Evolverbetert-0.1.0.0-271SADPNJTlDKWLXW74F3z  Evolverbetert-0.1.0.0-6k1KDmr4lZzKnicORwux4C  Evolverbetert-0.1.0.0-BUYfDAOWxXNKsqq0kwKWku  Evolverbetert-0.1.0.0-BajKSNGECZA9IRB6zIPgl9  Evolverbetert-0.1.0.0-D57g2GX9hrdL6S9lMXMFLj  Evolverbetert-0.1.0.0-DD6G7amiFg8Hfkh3a9XJ1g  Evolverbetert-0.1.0.0-EgE9vWkOSKZ3Ti1yjyQgIG  Evolverbetert-0.1.0.0-GL5qV9XdzSqIQVgpGTNWXJ  Evolverbetert-0.1.0.0-HyPWCmiuDMsHlGHRdLwqcN  Evolverbetert-0.1.0.0-IeUyGjLtZPnBOQPGwV2GNi  Evolverbetert-0.1.0.0-JVauai24MmC4VMIOpFCRwG  Evolverbetert-0.1.0.0-JiawwqdleTNHNC9Qg9fPkT  Evolverbetert-0.1.0.0-LjkPE0Wdux1AmRTdZ477DX  Evolverbetert-0.1.0.0-LrmqFxwYz0jL6p79muQSxE  Evolverbetert-0.1.0.0-V8JIjv9qj8K8hV6s9LpTj  Evolverbetert-0.1.0.0-oxgjcqyO3h9h1Y3DYcTQF  GLURaw-2.0.0.3-G12M6COyQIU5WfRlrIwPuj  GLUT-2.7.0.11-IP0PzJz4wI8KYXyKTnttpl  MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  ObjectName-1.1.0.1-EiFOWjUQWWuLyOhtrmuIWX  OpenGL-3.0.1.0-BckrJgI63aX3I0VRJxU6fY  OpenGLRaw-3.2.4.0-JDyGgOXR61GG549SwmWm2Q  StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  ansi-terminal-0.6.2.3-4HPxin1iv6RAndS8lH3nzo  ansi-wl-pprint-0.6.7.3-3GSHFrIr1fs45bsgKkZbLF  async-2.1.1-4n6HEMPJR2eJK0JpvCfuPK  base-orphans-0.5.4-ABoxiBf7nXc7Qqh66CgYc9  bifunctors-5.4.1-B27lbd71hBJ2VXEJmV4sQN  cabal-doctest-1-3OH6xMXYfakDTTZ99VQuTb  cabal-helper-0.7.3.0-GgnMvw3xDqG5ig90b4nErY  clock-0.7.2-8dRNleB7rysIZAOReuhpZA  cmdargs-0.10.15-82Rd8qGnkh7BxXgtGQcKKM  comonad-5-ETWy8l913C0Kq2HEAZg6Cb  contravariant-1.4-ETyVlWBlFwj93UDOdH22No  cpphs-1.20.4-GWE35ntSMdiKUT7JkXSjHw  data-inttrie-0.1.2-LwMrrR1qHVOJfuoxOFd7lf  data-memocombinators-0.5.1-7Cm5blFlrBsIAp5LANmGFG  distributive-0.5.2-JCgfTXNR3ywAyV7fFWIBI5  djinn-ghc-0.0.2.3-5z85bZcLoZHKC4DwT3srQu  (+62 more)
.stack-work/install/x86_64-linux/lts-8.5/8.0.2/pkgdb/: Evolverbetert-0.1.0.0-JVauai24MmC4VMIOpFCRwG.conf  Evolverbetert-0.1.0.0-JiawwqdleTNHNC9Qg9fPkT.conf  Evolverbetert-0.1.0.0-LjkPE0Wdux1AmRTdZ477DX.conf  Evolverbetert-0.1.0.0-V8JIjv9qj8K8hV6s9LpTj.conf  Evolverbetert-0.1.0.0-oxgjcqyO3h9h1Y3DYcTQF.conf  logict-state-0.1.0.2-FtL7XEDRMD0FKNlv0tvnvL.conf  package.cache  uuagc-cabal-1.0.6.0-H8NC5o3SDZA4aagPqivvK6.conf  uulib-0.9.22-FUKxRE9pNKo9lZ78nG3Dog.conf
app/: Main.hs
doc/: Evolverbetert.html  Misc.html  Mutations.html  MyGraphics.html  MyRandom.html  Parameters.html  World.html  doc-index.html  index.html  mini_Evolverbetert.html  mini_Misc.html  mini_Mutations.html  mini_MyRandom.html  mini_Parameters.html  mini_World.html
src/: Analysis.hs  Evolverbetert.hs  Fitness.hs  Landscapes.hs  Main.hs  Misc.hs  Mutations.hs  MyGraphics.hs  MyRandom.hs  MyRandom2.hs  Parameters.hs  Parsing.hs  PipeLines.hs  Types.hs  World.hs
src/oldRand/: MyRandom.hs  MyRandom2.hs  MyRandom3.hs
test/: Test.hs  plot.R  plot.py
test/yeastCC/: .~lock.YeastCellCycle.ods#  YeastCellCycle  YeastCellCycle.ods  YeastEdges  YeastNodes  YeastStateNetOld  YeastStateNetOldSense  YeastStateNetOldSense2  YeastStateNetOldSense3  YeastStateNetOldSense4  YeastStateNetOldSense5  see.cys
test/yeastCC2/: YeastCellCycle  yeastedges  yeastnodes  yeaststatenet
(+1889 files in other folders)
