name:                Evolverbetert
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Evolverbetert#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Evolverbetert, Parameters, World, Misc, Mutations, MyRandom, MyGraphics, Types, Parsing
  build-depends:       time, directory, bytestring, primitive, mwc-random, data-memocombinators, random-shuffle, monad-parallel, GLUT, text, ansi-terminal, split, MonadRandom, random, array, containers, mtl, mersenne-random-pure64, base >= 4.7 && < 5
  default-language:    Haskell2010

executable Evolverbetert-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N -rtsopts -Wall -O2 -fexcess-precision -optc-O3 -optc-ffast-math -no-recomp
  build-depends:       base
                     , Evolverbetert
  default-language:    Haskell2010

test-suite Evolverbetert-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , Evolverbetert
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Evolverbetert
