name:                Evolverbetert
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Evolverbetert#readme
license:             BSD3
license-file:        LICENSE
author:              Karim Hajji
maintainer:          k.hajji@students.uu.nl
copyright:           2017 Karim Hajji
category:            wat
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10



executable Evolverbetert
  hs-source-dirs:      src
  other-modules:       Parameters, World, Misc, Mutations, MyRandom, MyGraphics, Types, Parsing
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N -rtsopts -O2 -fexcess-precision -optc-O3 -optc-ffast-math -Wall
  build-depends:       process, time, directory, bytestring, primitive, mwc-random, data-memocombinators, random-shuffle, monad-parallel, GLUT, text, ansi-terminal, split, MonadRandom, random, array, containers, mtl, mersenne-random-pure64, base
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Parameters, World, Misc, Mutations, MyRandom, MyGraphics, Types, Parsing
  ghc-options:         -O2 -fexcess-precision -optc-O3 -optc-ffast-math -Wall
  build-depends:       process, time, directory, bytestring, primitive, mwc-random, data-memocombinators, random-shuffle, monad-parallel, GLUT, text, ansi-terminal, split, MonadRandom, random, array, containers, mtl, mersenne-random-pure64, base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Evolverbetert-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , Evolverbetert
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Evolverbetert
